--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "12.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.45.0"
+    "sass": "^1.45.0",
+    "simple-react-lightbox": "^3.6.9-0",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "eslint": "7.32.0",
